--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 								<!-- <li><a class="inner-link" href="#support" target="_self">Support</a></li><li><a class="inner-link" href="#subscribe" target="_self">Subscribe</a></li> -->
 								<li><a href="http://2019.fossasia.org" target="_self">FOSSASIA Summit'19</a></li>
 								<li><a href="http://blog.fossasia.org" target="_self">Blog</a></li>
-								<li><a href="./donate/" target="self">Donate</a></li>
+								<li><a href="http://fossasia.org/donate/" target="self">Donate</a></li>
 								<li><a href="https://groups.google.com/group/fossasia" target="_self">Mailing List</a></li>
 								<li><a href="http://blog.fossasia.org/contact/" target="_self">Contact</a></li>
 							</ul>
